--- a/course_arden/teacher/templates/teacher/publish_course.html
+++ b/course_arden/teacher/templates/teacher/publish_course.html
@@ -6,14 +6,32 @@
     <title>Publish Course</title>
   </head>
   <body>
-    <form method="post" enctype="multipart/form-data">
-      {% csrf_token %} {{ form }}
-      <button type="submit">Create</button>
-      {% if successmessage %}
-      <p>{{successmessage}}</p>
-      {% endif %} {% if errormessage %}
-      <p>{{errormessage}}</p>
-      {% endif %}
+    <h1>Create Chapters for {{ course.title }}</h1>
+    <form method="POST">
+      {% csrf_token %} {% for form in chapter_forms %}
+      <fieldset>
+        <legend>Chapter {{ forloop.counter }}</legend>
+        {{ form.as_p }}
+      </fieldset>
+      {% endfor %}
+      <button type="submit" name="form_type" value="chapters">
+        Save Chapters
+      </button>
     </form>
+    <form method="POST">
+      {% csrf_token %} {{ couponForm.as_p }}
+      <button type="submit" name="form_type" value="coupon">
+        Create Coupon
+      </button>
+    </form>
+    <form method="POST">
+      {% csrf_token %}
+      <button type="submit" name="form_type" value="publish">Publish</button>
+    </form>
+    {% if successmessage %}
+    <p>{{successmessage}}</p>
+    {% endif %} {% if errormessage %}
+    <p>{{errormessage}}</p>
+    {% endif %}
   </body>
 </html>
