--- a/course_arden/teacher/templates/teacher/publish_course.html
+++ b/course_arden/teacher/templates/teacher/publish_course.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Create Chapters for {{ course.title }}</h1>
-    <form method="POST">
+    <form method="POST" enctype="multipart/form-data">
       {% csrf_token %} {% for form in chapter_forms %}
       <fieldset>
         <legend>Chapter {{ forloop.counter }}</legend>
