--- a/course_arden/student/templates/student/checkout.html
+++ b/course_arden/student/templates/student/checkout.html
@@ -6,7 +6,6 @@
   <body>
     <h1>Checkout</h1>
     <form id="payment-form">
-      {% csrf_token %}
       <div id="card-element"></div>
       <button id="submit">Pay</button>
       <p id="error-message"></p>
@@ -22,9 +21,20 @@
       const form = document.getElementById("payment-form");
       form.addEventListener("submit", async (event) => {
         event.preventDefault();
+        const response = await fetch(
+          "{% url 'student:courseCheckout' course.id  %}",
+          {
+            method: "POST",
+            headers: {
+              "Content-Type": "application/json",
+            },
+          }
+        );
+
+        const { clientSecret } = await response.json();
 
         const { error, paymentIntent } = await stripe.confirmCardPayment(
-          "{{ clientSecret }}",
+          clientSecret,
           {
             payment_method: {
               card: cardElement,
